Fix explorer dark mode issue and restructure scss (#157) (#262)
* dark mode fixes


* restructure scss


* minor line removals


(cherry picked from commit d957074cd7cf68714c0248b54d2d5c9864fbcda5)

--- a/public/components/event_analytics/explorer/visualizations/visualizations.scss
+++ b/public/components/event_analytics/explorer/visualizations/visualizations.scss
@@ -12,6 +12,5 @@
   display: grid;
   grid-template-rows: auto 1fr;
   grid-area: workspace;
-  background-color: #FFF;
   height: 100%;
 }
